--- a/style.css
+++ b/style.css
@@ -457,6 +457,11 @@ section{
         width: 100%;
     }
 
+    .contact-form{
+        margin: 0 2%;
+        padding: 20px 20px;
+    }
+
 }
 
 @media (max-width: 800px) {
@@ -511,5 +516,10 @@ section{
 @media (max-width: 400px) {
     .social{
         font-size: 20px;
+    }
+
+    .contact-form{
+        margin: 0 2%;
+        padding: 10px 10px;
     }
 }
